syntax = "proto3";

package queue;

option go_package = "./api-gateway/internal/queueBroker/pb";

service QueueService {
  rpc Get(GetRequest) returns (GetResponse) {}
  rpc Put(PutRequest) returns (PutResponse) {}
}

// Get

message GetRequest {
  int64 timeout = 1;
  string category = 2;
}

message GetResponse {
  int64 status = 1;
  string item = 2;
  string error = 3;
}

// Put

message PutRequest {
  string category = 1;
  string item = 2;
}

message PutResponse {
  int64 status = 1;
  string error = 2;
}